[gd_scene load_steps=6 format=2]

[ext_resource path="res://Import/Fonts/Pixellari.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/DialogueBox.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.831373, 0.447059, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0.698039, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[node name="OuterPanel" type="Panel"]
margin_right = 768.0
margin_bottom = 208.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="InnerPanel" type="Panel" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 760.0
margin_bottom = 200.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="DialogueText" type="RichTextLabel" parent="InnerPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 744.0
margin_bottom = 184.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Vriska did EVERYTHING wrong"

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.35

[connection signal="timeout" from="DelayTimer" to="." method="_on_Timer_timeout"]
